Fixes some spacing and styling

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,11 +13,11 @@
     border: none;
     font-size: 12pt;
     background-color: #fafafa;
-}
 
-.addCourse:hover {
+    &hover {
     cursor: pointer;
     text-decoration: underline;
+    }
 }
 
 #residency, #selectcourses {
